css: focus visible fix

--- a/gui/src/app/features/file-analysis/file-format/file-format.component.scss
+++ b/gui/src/app/features/file-analysis/file-format/file-format.component.scss
@@ -5,7 +5,7 @@ mat-row:hover {
   background-color: var(--mat-sys-primary-container);
   cursor: pointer;
 }
-mat-row:focus {
+mat-row:focus-visible {
   outline: none;
   background-color: var(--mat-sys-primary-container);
 }
