--- a/gui/src/app/features/file-analysis/result-details/result-details.component.scss
+++ b/gui/src/app/features/file-analysis/result-details/result-details.component.scss
@@ -6,7 +6,7 @@
   background-color: var(--mat-sys-primary-container);
   cursor: pointer;
 }
-.tool-row:focus {
+.tool-row:focus-visible {
   outline: none;
   background-color: var(--mat-sys-primary-container);
 }
